--- a/Styles.css
+++ b/Styles.css
@@ -15,7 +15,7 @@ body{
 }
 .imagen_principal{
   height: 900px;
-  background-image: url(Img/2058239.jpg);
+  background-image: url(Img/Imagen_inicio.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
