--- a/Styles.css
+++ b/Styles.css
@@ -4,6 +4,9 @@
   padding: 0;
 }
 
+img{
+  border: 1px red solid;
+}
 body{
   font-size: 16px;
   font-family: 'Poppins', sans-serif;
@@ -18,7 +21,7 @@ body{
   margin-left: 5%;
 }
 .imagen_principal{
-  height: 900px;
+  height: 60vh;
   background-image: url(Img/Imagen_inicio.jpg);
   background-size: cover;
   background-repeat: no-repeat;
@@ -144,7 +147,7 @@ body{
 @media screen and (max-width: 820px){ 
   .imagen_principal{
     max-height: 900px;
-    max-width: 73.2%;
+    max-width: 100%;
     background-image: url(Img/Imagen_inicio.jpg);
     background-size: cover;
     background-repeat: no-repeat;
@@ -167,7 +170,7 @@ body{
   .Ven_celebrar{
     display: flex;
     color: white;
-    max-width: 73.2%;
+    max-width: 100%;
     max-height: 500px;
     background: linear-gradient(to right, #000000, grey );
   }
@@ -220,7 +223,7 @@ body{
     margin-top: -20px;
   }
   .degradado {
-    width: 73.2%;
+    width: 100%;
     height: 100%;
     background: linear-gradient(to right, #000000,  #F2DA91);
   }
