--- a/Styles.css
+++ b/Styles.css
@@ -4,9 +4,6 @@
   padding: 0;
 }
 
-img{
-  border: 1px red solid;
-}
 body{
   font-size: 16px;
   font-family: 'Poppins', sans-serif;
@@ -21,7 +18,7 @@ body{
   margin-left: 5%;
 }
 .imagen_principal{
-  height: 60vh;
+  height: 90vh;
   background-image: url(Img/Imagen_inicio.jpg);
   background-size: cover;
   background-repeat: no-repeat;
@@ -146,7 +143,7 @@ body{
 
 @media screen and (max-width: 820px){ 
   .imagen_principal{
-    max-height: 900px;
+    max-height: 90vh;
     max-width: 100%;
     background-image: url(Img/Imagen_inicio.jpg);
     background-size: cover;
